get rid of as many build warnings as possible